--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@ integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4
         </div>
         <div class="statsContainer">
             <div>
-                <img class="profileImage" src="https://media.licdn.com/dms/image/C4E03AQGxuvkep0xM1Q/profile-displayphoto-shrink_400_400/0/1629630293980?e=1712188800&v=beta&t=Jvx_vIKbUXWoemrN4nNILzaWOFKW_06ufCLf9RH1AXs" alt="Honda Flightdeck">
+                <img class="profileImage" src="https://media.licdn.com/dms/image/C4E03AQGxuvkep0xM1Q/profile-displayphoto-shrink_200_200/0/1629630293980?e=2147483647&v=beta&t=WANk65udq3KtI_oQOsfRhbN8ZzGptK82PceWA2jTaTk" alt="Honda Flightdeck">
             </div>
             <div class="stats darkerText">
                 <div>
@@ -48,7 +48,7 @@ integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4
                     <div>
                         <i class="fa-solid fa-file-code"></i>
                     </div>
-                    <p class=""># commits this year</p>
+                    <p class="">9 commits this year</p>
                 </div>
             </div>
         </div>
@@ -68,22 +68,22 @@ integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4
                     <p>Family Website Design</p>
                 </div>
                 <div>
-                    <img src="/photo/IMG_1244.jpeg" alt="familywebsitehomepage-img"/>
+                    <img src="/photo/IMG_3759.jpeg" alt="familywebsitehomepage-img"/>
                 </div>
             </div>
             <div class="projectItem">
                 <div>
                     <p class="darkerText">Jan 28, 2024</p>
-                    <p>Family Website Design</p>
+                    <p>Airline Start-up</p>
                 </div>
                 <div>
-                    <img src="/photo/IMG_1244.jpeg" alt="familywebsitehomepage-img"/>
+                    <img src="/photo/IMG_1830.jpeg" alt="familywebsitehomepage-img"/>
                 </div>
             </div>
             <div class="projectItem">
                 <div>
                     <p class="darkerText">Jan 28, 2024</p>
-                    <p>Family Website Design</p>
+                    <p>Aircraft management and flying</p>
                 </div>
                 <div>
                     <img src="/photo/IMG_1244.jpeg" alt="familywebsitehomepage-img"/>
