--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
                 Devan and Emily Wiebe Family
             </h2>
                 <p class="topRight">
-                    <a target="_blank" href="https//dewiebefamily.com/portfolio">About Devan</a>
+                    <a target="_blank" href="/portfolio">About Devan</a>
                     <a target="_blank" href="https//dewiebefamily.com/emily">About Emily</a>
                     <a target="_blank" href="https://www.facebook.com/flyerwiebe">Social Media</a>
                 </p>
