--- a/portfolio.html
+++ b/portfolio.html
@@ -68,7 +68,7 @@ integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4
                     <p>Family Website Design</p>
                 </div>
                 <div>
-                    <img src="/photo/IMG_3759.jpeg" alt="familywebsitehomepage-img"/>
+                    <img src="/Photos/IMG_3759.jpeg" alt="familywebsitehomepage-img"/>
                 </div>
             </div>
             <div class="projectItem">
@@ -77,7 +77,7 @@ integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4
                     <p>Airline Start-up</p>
                 </div>
                 <div>
-                    <img src="/photo/IMG_1830.jpeg" alt="familywebsitehomepage-img"/>
+                    <img src="/Photos/IMG_1830.jpeg" alt="familywebsitehomepage-img"/>
                 </div>
             </div>
             <div class="projectItem">
@@ -86,7 +86,7 @@ integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4
                     <p>Aircraft management and flying</p>
                 </div>
                 <div>
-                    <img src="/photo/IMG_1244.jpeg" alt="familywebsitehomepage-img"/>
+                    <img src="/Photos/IMG_1244.jpeg" alt="familywebsitehomepage-img"/>
                 </div>
             </div>
         </section>
