--- a/index.html
+++ b/index.html
@@ -1,49 +1,88 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=devic-width, initial scale=1.0">
-        <title>Devan and Emily Wiebe Family</title>
-        <link rel="stylesheet" href="styles.css">
-    </head>
-    <body>
-        <header>
-            <h2 class="topLeft">
-                Devan and Emily Wiebe Family
-            </h2>
-                <p class="topRight">
-                    <a target="_blank" href="/portfolio">About Devan</a>
-                    <a target="_blank" href="https//dewiebefamily.com/emily">About Emily</a>
-                    <a target="_blank" href="https://www.facebook.com/flyerwiebe">Social Media</a>
-                </p>
-        </header>
-        <section class="familyPhoto">
-            <img src="/Photos/Family Photo.jpeg" alt="Family Photo">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Devan's First Webpage</title>
+    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" 
+    integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" 
+    crossorigin="anonymous" 
+    referrerpolicy="no-referrer" />
+</head>
+<body>
+    <header>
+        <nav>
+            <a class="greyLink" href=""add_a_link>
+                <p>About</p>
+            </a>
+            <a class="greyLink" href=""add_a_link>
+                <p>Store</p>
+            </a>
+        </nav>
+        <section>
+        <a class="whiteLink" href="#add_a_link">
+            <p>Gmail</p>
+        </a>
+        <a class="whiteLink" href="#add_a_link">
+            <p>Images</p>
+        </a>
+        <a class="whiteLink" href="#add_a_link">
+            <i class="fa-solid fa-list-ul"></i>
+        </a>
+        <a href="#add_a_link">
+            <img src="/Public/IMG_5825.jpeg" alt="family pic" />
+        </a>
+        </section>
+    </header>
+    <main>
+        <div>
+            <h1 class="headerText"
+            id="headerLogo">Google!</h1>
+        </div>
+        <div class="searchBar">
+            <div>
+                <i class="fa-solid fa-magnifying-glass"></i>
+            </div>
+            <input/>
+            <div class="iconbuttoncontainer">
+                <button class="iconbutton">
+                    <i class="fa-solid fa-microphone"></i>
+                </button>
+                <button class="iconbutton">
+                    <i class="fa-regular fa-camera"></i>
+                </button>
+            </div>
+        </div>
+        <div class="searchButtonsContainer">
+            <Button>
+                <p>Google Search</p>>
+            </Button>
+            <Button>
+                <p>I'm Feeling Lucky</p>>
+            </Button>
+        </div>
+        <div class="languageSelection">
+            <p>Google Offered In: <span>English</span></p>
+        </div>
+    </main>
+    <footer>
+        <section>
+            <p>United States</p>
         </section>
         <section>
-            <h2 class="description">Devan and Emily Wiebe were born and raised in Massachusetts. They are the proud parents of three children.</h2>
-            <img class="DevanEmily" src="/Photos/Devan and Emily.jpeg" alt="Devan and Emily">
-            <p class="parents">Devan and Emily</p>
-            <div>
-                <div class="childrenImage">
-                    <img class="abigail" src="/Photos/Abigail.jpeg" alt="Abigail">
-                    <img class="mitchell" src="/Photos/Mitchell.jpeg" alt="Mitchell">
-                    <img class="dylan" src="/Photos/Dylan.jpeg" alt="Dylan">
-                </div>
-                <div class="childrenName">
-                    <p>Abigail</p>
-                    <p>Mitchell</p>
-                    <p>Dylan</p>
-                </div>
+            <div class="footerlink">
+                <a>Advertising</a>
+                <a>Business</a>
+                <a>How Search works</a>
+            </div>
+            <div class="footerlink">
+                <a>Privacy</a>
+                <a>Terms</a>
+                <a>Settings</a>
             </div>
         </section>
-        <footer>
-            <p>Link's of Interest to us:
-                <a href="https://www.newlife.org">Our local church family</a>
-                <a href="https://www.csfpakistan.org">Christian Soul Fellowship - Pakistan</a>
-                <a href="https://www.wiebefamily.org">Wiebe Family Website</a>
-                <p>This website est. 2024</p>
-            </p>
-        </footer>
-    </body>
+        
+    </footer>
+</body>
 </html>
