--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
                 Devan and Emily Wiebe Family <i class="fa-regular fa-paper-plane"></i><a class="outreach" href="mailto:devan.emily@dewiebefamily.com">Email Us</a>
             </h2>
                 <p class="topRight">
-                    <a target="_blank" href="https//dewiebefamily.com/portfolio">About Devan</a>
+                    <a target="_blank" href="/portfolio">About Devan</a>
                     <a target="_blank" href="https//dewiebefamily.com/emily">About Emily</a>
                     <a target="_blank" href="https://www.facebook.com/flyerwiebe">Social Media</a>
                 </p>
