--- a/index.html
+++ b/index.html
@@ -2,10 +2,11 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <meta name="viewport" content="width=devic-width, initial scale=1.0">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>Devan and Emily Wiebe Family</title>
         <link rel="stylesheet" href="styles.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+        <meta name="description" content="deWiebefamily Website"/>
     </head>
     <body>
         <header>
