--- a/portfolio.html
+++ b/portfolio.html
@@ -16,7 +16,7 @@ integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4
     <header>
         <h2>DW</h2>
         <nav>
-            <a target="_blank" href="https://dewiebefamily.com">Family Homepage</a>
+            <a target="_blank" href="https://wiebefamily.me">Family Homepage</a>
             <a target="_blank" href="https://github.com/sonicsxl23">Github</a>
             <a target="_blank" href="https://www.linkedin.com/in/devan-wiebe-833353108/">LinkedIn Profile</a>
         </nav>
@@ -54,7 +54,7 @@ integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4
         </div>
         <p class="aboutMe">Hello! My name is Devan Wiebe. I have been working in aviation as a pilot and in management for over 15 years. I got into software development because solving problems and writing code facinates me. I love to see people and projects come together to produce meaningful results.</p>
         <div class="darkerText">
-            <a class="outreach" href="mailto:devan@dewiebefamily.com">
+            <a class="outreach" href="mailto:devan@wiebefamily.me">
                 <i class="fa-solid fa-arrow-right"></i>
                 <p>Email me</p>
             </a>
