--- a/index.html
+++ b/index.html
@@ -2,16 +2,16 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Devan and Emily Wiebe Family</title>
         <link rel="stylesheet" href="styles.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-        <meta name="description" content="deWiebefamily Website"/>
+        <meta name="description" content="Wiebefamily Website"/>
     </head>
     <body>
         <header>
             <h2 class="topLeft">
-                Devan and Emily Wiebe Family <i class="fa-regular fa-paper-plane"></i><a class="outreach" href="mailto:devan.emily@dewiebefamily.com">Email Us</a>
+                Devan and Emily Wiebe Family <i class="fa-regular fa-paper-plane"></i><a class="outreach" href="mailto:devan.emily@wiebefamily.me">Email Us</a>
             </h2>
                 <p class="topRight">
                     <a target="_blank" href="/portfolio">About Devan</a>
