--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
             <img src="/Photos/Family Photo.jpeg" alt="Family Photo">
         </section>
         <section>
-            <h2 class="description">Devan and Emily Wiebe were born and raised in Massachusetts. They are the proud parents of three children.</h2>
-            <img class="DevanEmily" src="/Photos/Devan and Emily.jpeg" alt="Devan and Emily">
+            <h2 class="description">Devan and Emily Wiebe were born and raised in Massachusetts. They are the proud parents of four children.</h2>
+            <img class="DevanEmily" src="/Photos/Devan and Emily.JPG" alt="Devan and Emily">
             <p class="parents">Devan and Emily</p>
             <div class="childrenContainer">
                 <div class="Abigail">
@@ -38,6 +38,10 @@
                 <div class="Dylan">
                     <img class="dylan" src="/Photos/Dylan.jpeg" alt="Dylan">
                     <p>Dylan</p>
+                </div>
+                <div class="Kestrel">
+                    <img class="kestrel" src="/Photos/Kestrel.jpeg" alt="Kestrel">
+                    <p>Kestrel</p>
                 </div>
             </div>
         </section>
