--- a/portfolio.html
+++ b/portfolio.html
@@ -159,7 +159,7 @@
         <li><i class="fa-solid fa-envelope"></i> <a href="mailto:devan@wiebefamily.me">devan@wiebefamily.me</a></li>
       </ul>
       <div class="cta-row">
-        <a class="btn" href="Devan's_Resume_2025.pdf" target="_blank" rel="noopener">View Full Résumé</a>
+        <a class="btn" href="Devan's_Resume_Nov_2025.pdf" target="_blank" rel="noopener">View Full Résumé</a>
         <a class="btn outline" href="https://www.linkedin.com/in/devan-wiebe-833353108/" target="_blank" rel="noopener">LinkedIn</a>
       </div>
     </section>
