--- a/index.html
+++ b/index.html
@@ -69,6 +69,7 @@
         <a href="https://www.newlife.org" target="_blank" rel="noopener">Our local church family</a>
         <a href="https://www.csfpakistan.org" target="_blank" rel="noopener">Christian Soul Fellowship - Pakistan</a>
         <a href="https://www.wiebefamily.org" target="_blank" rel="noopener">Wiebe Family Website</a>
+        <a href="https://www.newlifefinearts.org" target="_blank" rel="noopener">New Life Fine Arts Musical Theater</a>
       </p>
       <p class="est">This website est. 2024, updated <span id="year"></span></p>
     </footer>
